feat: Added view mode list/grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preload" href="/src/shared/config/theme/assets/fonts/Inter/static/Inter-Bold.ttf" as="font" type="font/ttf" crossorigin>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DB Mail Service</title>
+    <title>Ubiquiti (by Victor Kasap)</title>
   </head>
   <body>
     <div id="root"></div>
